pkg/ace/doc/    ace.tex, options.tex, interact.tex:    - added another option warning ... interactively, some options that are      no longer on `OptionsStack' may still be current for the ACE binary      process. The user can use `GetACEOptions' to keep track of these.    ace.tex, examples.tex:    - when entering a break-loop from `ACECosetTableFromGensAndRels' the      `OnBreakMessage' has been altered to be more helpful ... it suggests      that using the `hard' or altering the `workspace' option may help,      and also suggests two topics to look at via ? to get more info.    examples.tex:    - B.5 has been abbreviated, but the missing info can be obtained using ?    strategies.tex:    - `hlt' option description now mentions that `lookahead' is on for this      option, unlike Sims' default HLT, but states how to get Sims' default      HLT.    - `sims' option description now accurate.    moreexamples.tex:    - C.2 "Emulating Sims" is now complete, giving the examples to which the      `sims' option description above refers.    interact.tex, otheroptions.tex:    - `ACEStandardCosetNumbering', `standard' notes now refer to C.2 for an      example demonstrating ``halting an ACE process, standardising and      continuing''. pkg/ace/standalone-doc/    CHANGES, al2.tex, ex001.tex:    - edited in a similar way to doc/strategies.tex and doc/moreexamples.tex      so that the descriptions of `hlt' and `sims' are more accurate/inform-      ative. pkg/ace/doc/manual.{six,dvi}, pkg/ace/standalone-doc/ace3001.dvi, pkg/ace/htm/*.htm:    consequence of other changes.

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -228,7 +228,10 @@ Error, no coset table ...
  called from
 <function>( <arguments> ) called from read-eval-loop
 Entering break read-eval-print loop ...
- try relaxing any restrictive options:
+ try relaxing any restrictive options
+ e.g. try the `hard' strategy or increasing `workspace'
+ type: '?strategy options' for info on strategies
+ type: '?options for ACE' for info on options
  type: 'DisplayACEOptions();' to see current ACE options;
  type: 'SetACEOptions(:<option1> := <value1>, ...);'
  to set <option1> to <value1> etc.
@@ -621,7 +624,10 @@ by {\GAP} by which {\ACE} options may be passed. In  Section~"Warnings
 regarding Options", we discuss how options ``left over'' from previous
 calculations can upset subsequent calculations; and hence, to  ``clear
 the  decks''   in   such   circumstances,   why   we   have   provided
-`FlushOptionsStack' (see~"FlushOptionsStack").
+`FlushOptionsStack'   (see~"FlushOptionsStack").   However,   removing
+`OptionsStack' options does not remove the options  previously  passed
+to  an  *interactive*  {\ACE}  process;  Section~"Warnings   regarding
+Options" discusses that too.
 
 Note, that the  {\ACE}  share  package  treatment  of  options  is  an
 ``enhancement'' over the general way {\GAP} treats  options.  Firstly,
