--- a/doc/otheroptions.tex
+++ b/doc/otheroptions.tex
@@ -702,8 +702,9 @@ In  five  of  the  ten  standard  enumeration   strategies   of   Sims
 the   table   is   standardised   repeatedly.   This   is    expensive
 computationally, but can result in fewer cosets being  necessary.  The
 effect of doing this can be investigated  in  {\ACE}  by  (repeatedly)
-halting  the  enumeration  (by  say,  imposing  timing  restrictions),
-standardising the coset numbering, and continuing.
+halting the enumeration (via restrictive options),  standardising  the
+coset numbering, and continuing (see Section~"Emulating Sims"  for  an
+interactive example).
 
 *INTERACTIVELY*,            use            `ACEStandardCosetNumbering'
 (see~"ACEStandardCosetNumbering").
