--- a/doc/strategies.tex
+++ b/doc/strategies.tex
@@ -37,8 +37,8 @@ seen in Chapter~"Options for ACE", all at once;  they  are  parsed  in
 *exactly* the same way as other options; order *is* important.  It  is
 usual to specify one strategy option and possibly  follow  it  with  a
 number of options defined in Chapter~"Options for ACE", some of  which
-may over-ride those options set by strategy option.  Please  refer  to
-the  introductory  sections  of  Chapter~"Options  for  ACE",   paying
+may over-ride those options set by the strategy option.  Please  refer
+to the introductory sections  of  Chapter~"Options  for  ACE",  paying
 particular attention to Sections "Warnings regarding  Options",  "What
 happens if no ACE Strategy Option or if  no  ACE  Option  is  passed",
 and~"Interpretation of ACE  Options",  which  give  various  warnings,
@@ -192,7 +192,13 @@ in more than $1000$ definitions, reversing the balance between R style
 and C style definitions.
 
 \>`hlt'{option hlt}@{option `hlt'}&
-Selects the standard HLT strategy.
+Selects  {\ACE}'s   standard   HLT   strategy.   
+
+Unlike  Sims'  \cite{Sim94}  default  HLT  strategy,  `hlt'  sets  the
+`lookahead'  option  (see~"option  lookahead").  However,  the  option
+sequence ```hlt, lookahead := 0''' easily achieves Sims'  default  HLT
+strategy  (recall,  the  ordering  of  options   is   respected;   see
+Section~"Honouring of the order in which ACE Options are passed").
 
 This is an *R style* (see Section~"Enumeration Style") strategy.
 
@@ -213,19 +219,23 @@ lookahead") and no `row'-filling (see "option row").
 \>`sims:=<val>'{option sims}@{option `sims'}&
 Sets a Sims strategy; <val> should be one of 1, 3, 5, 7 or 9.
 
-In his book~\cite{Sim94},  Sims  discusses  ten  standard  enumeration
-strategies; these are effectively `hlt' (see~"option hlt"),  with  and
-without  `mendelsohn'  (see~"option  mendelsohn")  set,  and  `felsch'
-(see~"option felsch"), all either with  or  without  (`lenlex')  table
-standardisation (see  Section~"Coset  Table  Standardisation  Schemes"
-and~"ACEStandardCosetNumbering"   or~"option   standard")    as    the
-enumeration proceeds. {\ACE} does not implement table  standardisation
-during an enumeration, although incomplete tables can be  standardised
-and an enumeration continued. The `sims' option  implements  the  five
-odd-numbered non-standardising  strategies  of~\cite{Sim94}  ({\ACE}'s
-numbering   of   the    strategies    coincides    with    Section~5.5
-of~\cite{Sim94}).  With  care,  it  is  possible  to   duplicate   the
-statistics  given  in~\cite{Sim94};  some  examples   are   given   in
+In his book~\cite{Sim94}, Sims discusses (and lists  in  Table  5.5.1)
+ten  standard  enumeration  strategies.  The  Sims'   strategies   are
+effectively `hlt' (see~"option hlt") without `lookahead'  (see~"option
+lookahead"), with or without  `mendelsohn'  (see~"option  mendelsohn")
+set, in R (`rt' positive, `ct := 0') or R\* style (`rt' negative,  `ct
+:= 0'); and `felsch' (see~"option felsch"); all either with or without
+(`lenlex')   table   standardisation   (see    Section~"Coset    Table
+Standardisation  Schemes"  and~"ACEStandardCosetNumbering"  or~"option
+standard") as the enumeration  proceeds.  {\ACE}  does  not  implement
+table standardisation during an enumeration, and so only provides  the
+odd-numbered strategies of Sims  ({\ACE}'s  numbering  coincides  with
+that of Sims).
+
+With care, it is often possible  to  duplicate  the  statistics  given
+in~\cite{Sim94}  for  his  odd-numbered  strategies  and  it  is  also
+possible  (using  the  interactive  facilities)  to  approximate   his
+even-numbered    strategies;    some    examples    are    given    in
 Section~"Emulating Sims".
 
 \enditems
