--- a/doc/messages.tex
+++ b/doc/messages.tex
@@ -37,8 +37,8 @@ gap> SetInfoACELevel(3);
 This  causes  each  line  of  {\ACE}  output  to  be  prepended   with
 ```\#I  '''.  Below,  we describe the `Info'-ed output  observed  when
 each of `ACECosetTableFromGensAndRels', `ACECosetTable', `ACEStats' or
-`ACEStart', is called with three arguments,  and  presume  that  users
-will be able to extend the description to explain output observed from
+`ACEStart' is called with three arguments, and presume that users will
+be able to extend the description  to  explain  output  observed  from
 other  {\ACE}  interface  functions.  The  first-observed  (`Info'-ed)
 output from {\ACE}, is {\ACE}'s banner, e.g.
 
