--- a/doc/moreexamples.tex
+++ b/doc/moreexamples.tex
@@ -257,8 +257,8 @@ fail
 
 Since, the enumeration overflowed and the  `silent'  option  was  set,
 `ACECosetTableFromGensAndRels' simply returned `fail'.  But  hang  on,
-{\ACE} at least has a partial table; we should be able to get that  in
-{\GAP},  in  a  situation  like  this.  We  can.  We  simply  use  the
+{\ACE} at least has a partial table; we should be able to obtain it in
+{\GAP} format, in a situation like this. We can.  We  simply  use  the
 `incomplete' option, instead of the `silent' option.  However,  if  we
 did that with the example above, the result would be an enormous table
 (the number of *active cosets* is 249998); so  let  us  also  set  the
