--- a/doc/strategies.tex
+++ b/doc/strategies.tex
@@ -235,8 +235,8 @@ that of Sims).
 With care, it is often possible  to  duplicate  the  statistics  given
 in~\cite{Sim94}  for  his  odd-numbered  strategies  and  it  is  also
 possible  (using  the  interactive  facilities)  to  approximate   his
-even-numbered    strategies;    some    examples    are    given    in
-Section~"Emulating Sims".
+even-numbered strategies. Examples and a more detailed  exposition  of
+the Sims strategies are given in Section~"Emulating Sims".
 
 \enditems
 
