--- a/doc/install.tex
+++ b/doc/install.tex
@@ -18,11 +18,24 @@
 \Section{Installing the ACE Share Package}
 
 To install, unpack the archive file as a sub-directory  in  the  `pkg'
-hierarchy of your version  of  {\GAP}~4.  (This  might  be  the  `pkg'
+hierarchy of your  version  of  {\GAP}~4.  This  might  be  the  `pkg'
 directory of the {\GAP}~4 home directory; it is however also  possible
 to keep an additional `pkg' directory in your private directories, see
-Section~"ref:Installing Share  Packages"  of  the  {\GAP}~4  Reference
-Manual for details on how to do this.) Go to the newly  created  `ace'
+Section~"ref:Installing a Share Package in your home directory".  (The
+only essential difference with installing {\ACE} in a `pkg'  directory
+different to the {\GAP}~4 home directory is that one must start {\GAP}
+with the `-l' switch,  e.g.~if  your  private  `pkg'  directory  is  a
+subdirectory of `mygap' in your home directory you might type:
+
+%begintt
+\){\kernttindent}gap -l ";<myhomedir>/mygap"
+%endtt
+
+where <myhomedir> is the path to your home  directory,  which  may  be
+replaced by a tilde in {\GAP}~4.3. The empty path before the semicolon
+is filled in by the default path of the {\GAP}~4 home directory.)
+
+After unpacking the archive, go to the newly  created  `ace'
 directory and call `./configure <path>' where <path> is  the  path  to
 the {\GAP} home directory. So for example if you install  the  package
 in the main `pkg' directory call
