An update in readiness for conversion to using ACE 3.001 which will remove a bug in the `rc' option.

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -27,7 +27,8 @@
   \centerline{\titlefont ACE}\medskip
   \centerline{\titlefont ---}\medskip
   \centerline{\titlefont A GAP4 Share Package}\bigskip\bigskip
-  \centerline{\secfont Version 3.0}
+  \centerline{\secfont Version 3.0}\medskip
+  \centerline{\secfont Based on ACE Standalone Version 3.001}
   \vfill
   \centerline{\secfont by}\vfill
   \centerline{\secfont George Havas and Colin Ramsay}\medskip
